--- a/client/src/global.css
+++ b/client/src/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap");
 
 :root {
   color-scheme: light dark;
@@ -9,57 +9,65 @@
   -moz-osx-font-smoothing: grayscale;
 
   --bs-body-font-family: "Red Hat Text", sans-serif;
-  --bs-body-bg: #EEE9DA;
+  --bs-body-bg: #eee9da;
   --bs-primary-rgb: rgb(28, 103, 88);
-  --bs-secondary-bg: #D6CDA4;
-  --bs-tertiary-bg: #EEF2E6;
-  --bs-primary: #1C6758;
+  --bs-secondary-bg: #d6cda4;
+  --bs-tertiary-bg: #eef2e6;
+  --bs-primary: #1c6758;
   --bs-primary-bg-subtle: #393646;
-  --bs-primary-text-emphasis: #1C6758;
-  --primary: #1C6758;
-  --secondary: #3D8361;
+  --bs-primary-text-emphasis: #1c6758;
+  --primary: #1c6758;
+  --secondary: #3d8361;
 }
 
 html,
 body,
-#root{
+#root {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   width: 100%;
   min-height: 100dvh;
 }
-#root{
+#root {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-*{transition: 0.2s;}
+* {
+  transition: 0.2s;
+}
 
-header, main, footer{
+header,
+main,
+footer {
   width: 100%;
 }
 
-main{
+main {
   max-width: 1800px;
 }
 
-input:focus-visible{
+input:focus-visible {
   outline: none;
   border-bottom: 3px solid var(--primary);
 }
-
-.logo{
+nav {
+  position: relative;
+  background: #eee9da;
+  z-index: 2;
+}
+.logo {
   font-size: 36px;
   font-weight: bold;
   text-decoration: none;
   color: black;
 }
-.nav-link{
+.nav-link {
   font-size: 24px;
   font-weight: 400;
 }
-.nav-bar-input{
+.nav-bar-input {
   background: none;
   border: none;
   border-bottom: 2px solid rgb(54, 54, 54);
@@ -67,16 +75,66 @@ input:focus-visible{
   font-size: 20px;
   padding: 5px;
 }
-.button-outline{
+.button-outline {
   transition: 0.2s;
   border: 1px solid var(--primary);
 }
-.button-outline:hover{
+.button-outline:hover {
   background-color: var(--primary);
   color: white;
 }
-.navbar-nav{
+.navbar-nav {
   justify-content: center;
 }
-small{color: red;}
+small {
+  color: red;
+}
 
+.userBtn {
+  width: 66px;
+  height: 66px;
+  border-radius: 100%;
+  border: none;
+  background: none;
+  img {
+    width: 54px;
+    height: 54px;
+    background: white;
+    border-radius: 100%;
+    object-fit: cover;
+  }
+
+  &:hover {
+    background-color: rgba(28, 103, 88, 0.6);
+  }
+}
+.user-modal {
+  position: absolute;
+  max-width: 350px;
+  background: #eee9da;
+  width: 100%;
+  min-height: 200px;
+  right: 0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transform: translateY(-110%);
+
+  .user-info {
+    a {
+      font-size: 22px;
+      font-weight: 400;
+      color: black;
+      text-decoration: none;
+    }
+    h5 {
+      font-weight: 700;
+      color: rgb(28, 103, 88);
+    }
+  }
+}
+.modal-open{
+  transform: none;
+}
