--- a/client/src/pages/newPost/NewPost.css
+++ b/client/src/pages/newPost/NewPost.css
@@ -1,80 +1,94 @@
-.post-container{
-    margin: 50px auto;
-    background: white;
-    width: 80%;
-    min-width: 300px;
-    max-width: 800px;
-    border-radius: 15px;
-    padding: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.post-container h1{
-    border-bottom: 4px solid var(--primary);
-    padding-bottom: 20px;
-    width: 50%;
-    margin-bottom: 40px;
+.post-container {
+  display: flex;
+  padding: 0px 20px;
+  gap: 20px;
 }
 
-.new-blog-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.form-inputs {
+  flex: 3;
 }
 
-.new-blog-form textarea{
-    background: white;
-    color: black;
-    border: 2px solid var(--primary);
+.post-container aside {
+  flex: 1;
+  min-width: 300px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+.post-container aside button {
+  background: #0fac63;
+  border: 1px solid black;
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+}
+.post-container aside button:hover {
+    background: #13ec87;
+    color: rgb(0, 0, 0);
+}
+
+.form-select{
+    background: white !important;
+    border: 1px solid black !important;
+}
+.form-floating label{
+    color: black !important;
+    font-weight: 600 !important;
+}
+
+.post-container .title-input,
+.desc-input {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 40px;
+}
+
+.post-container .title-input label,
+.desc-input label {
+  font-size: 24px;
+  font-weight: 400;
+  color: #474747;
+}
+
+.post-container .title-input input,
+.desc-input textarea {
+  background: none;
+  border: 1px solid black;
+  border-radius: 5px;
+  color: black;
+  padding: 5px 10px;
+  font-size: 18px;
+}
+
+.desc-input textarea {
+  resize: none;
+  height: 140px;
+}
+.image-input img {
+  height: 200px;
+  width: 100%;
+  margin-bottom: 30px;
+  background: #198754;
+}
+
+.ql-editor {
+  min-height: 300px;
+  word-break: break-word;
+}
+
+.form-errors{
+    list-style: none;
+    padding: 0;
+    padding: 10px;
+    background: #ff000057;
+    border: 1px solid #6e0606;
     border-radius: 5px;
-    padding: 5px;
-    font-size: 20px;
-    margin-bottom: 50px;
-}
-
-.input-container{
-    width: 80%;
-    min-width: 250px;
-}
-.input-container textarea{
-    width: 100%;
-}
-
-.new-blog-form .content{
-    font-size: 18px;
-    height: 300px;
-}
-.input-container label{
-    font-size: 24px;
-    font-weight: bold;
-    padding-right: 10px;
-}
-
-.title-input{
-    display: flex;
-    align-items: center;
-}
-
-.new-blog-form input{
-    background: white;
-    border: none;
-    border-bottom: 2px solid var(--primary);
-    color: black;
-    width: 100%;
-    font-size: 20px; 
-}
-
-.sample-button{
     margin-top: 20px;
-    height: 50px;
-    width: 210px;
-    border-radius: 100px;
-    border: none;
-    background: var(--primary);
-    color: white;
-    font-size: 20px;
-    cursor: pointer;
 }
-.sample-button:active{
-    background-color: white;
-    color: var(--primary);
+.form-errors li:not(:last-child){
+    border-bottom: 1px solid #6e0606;
+    margin-bottom: 10px;
 }
