--- a/client/src/pages/search/Search.css
+++ b/client/src/pages/search/Search.css
@@ -10,6 +10,8 @@
     width: 100%;
     height: 100%;
     filter: brightness(0.5);
+    height: 210px;
+    object-fit: cover !important;
 }
 .image > .category{
     position: absolute;
