--- a/client/src/pages/blog/Blog.css
+++ b/client/src/pages/blog/Blog.css
@@ -85,7 +85,7 @@ body {
 }
 .conteudo-imagem .imagem-inicial {
   width: 100%;
-  max-height: 350px;
+  max-height: 500px;
   object-fit: cover;
 }
 
@@ -107,6 +107,10 @@ body {
   margin-top: 0;
   padding-bottom: 5px;
   font-size: 25px;
+}
+.texto h2{
+  margin-bottom: 20px;
+  padding-top: 15px;
 }
 
 .conteudo-titulo {
